// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CelebrateItemContent message renders accepted challenge event 1`] = `
<View
  style={
    Array [
      Object {
        "marginTop": 14,
        "maxHeight": 70,
      },
      Object {},
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Object {
          "fontSize": 14,
          "justifyContent": "flex-start",
          "lineHeight": 18,
        },
      ]
    }
  >
    John S. accepted a Challenge:
  </Text>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      accessible={true}
      clickable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="ChallengeLinkButton"
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            null,
            Object {
              "marginTop": 4,
            },
            null,
          ]
        }
      >
        <Text
          numberOfLines={2}
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "color": "#007398",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 18,
                "textAlign": "left",
              },
            ]
          }
        >
          Invite a friend to church
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`CelebrateItemContent message renders completed challenge event 1`] = `
<View
  style={
    Array [
      Object {
        "marginTop": 14,
        "maxHeight": 70,
      },
      Object {},
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Object {
          "fontSize": 14,
          "justifyContent": "flex-start",
          "lineHeight": 18,
        },
      ]
    }
  >
    John S. completed a Challenge:
  </Text>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      accessible={true}
      clickable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="ChallengeLinkButton"
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            null,
            Object {
              "marginTop": 4,
            },
            null,
          ]
        }
      >
        <Text
          numberOfLines={2}
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "color": "#007398",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 18,
                "textAlign": "left",
              },
            ]
          }
        >
          Invite a friend to church
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`CelebrateItemContent message renders created community event 1`] = `
<View
  style={
    Array [
      Object {
        "marginTop": 14,
        "maxHeight": 70,
      },
      Object {},
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Object {
          "fontSize": 14,
          "justifyContent": "flex-start",
          "lineHeight": 18,
        },
      ]
    }
  >
    John S. created Celebration Community!
  </Text>
</View>
`;

exports[`CelebrateItemContent message renders event with no subject person name 1`] = `
<View
  style={
    Array [
      Object {
        "marginTop": 14,
        "maxHeight": 70,
      },
      Object {},
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Object {
          "fontSize": 14,
          "justifyContent": "flex-start",
          "lineHeight": 18,
        },
      ]
    }
  >
    A MissionHub user completed a Step of Faith with a Forgiven person.
  </Text>
</View>
`;

exports[`CelebrateItemContent message renders joined community event 1`] = `
<View
  style={
    Array [
      Object {
        "marginTop": 14,
        "maxHeight": 70,
      },
      Object {},
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Object {
          "fontSize": 14,
          "justifyContent": "flex-start",
          "lineHeight": 18,
        },
      ]
    }
  >
    John S. joined Celebration Community! Now you can see and celebrate the steps of faith they are taking.
  </Text>
</View>
`;

exports[`CelebrateItemContent message renders joined community with passed in org name 1`] = `
<View
  style={
    Array [
      Object {
        "marginTop": 14,
        "maxHeight": 70,
      },
      Object {},
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Object {
          "fontSize": 14,
          "justifyContent": "flex-start",
          "lineHeight": 18,
        },
      ]
    }
  >
    John S. joined My Real Org! Now you can see and celebrate the steps of faith they are taking.
  </Text>
</View>
`;

exports[`CelebrateItemContent message renders other interaction event 1`] = `
<View
  style={
    Array [
      Object {
        "marginTop": 14,
        "maxHeight": 70,
      },
      Object {},
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Object {
          "fontSize": 14,
          "justifyContent": "flex-start",
          "lineHeight": 18,
        },
      ]
    }
  >
    John S. had a Spiritual Conversation.
  </Text>
</View>
`;

exports[`CelebrateItemContent message renders personal decision interaction event 1`] = `
<View
  style={
    Array [
      Object {
        "marginTop": 14,
        "maxHeight": 70,
      },
      Object {},
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Object {
          "fontSize": 14,
          "justifyContent": "flex-start",
          "lineHeight": 18,
        },
      ]
    }
  >
    John S. saw someone make a Personal Decision.
  </Text>
</View>
`;

exports[`CelebrateItemContent message renders something cool happened event 1`] = `
<View
  style={
    Array [
      Object {
        "marginTop": 14,
        "maxHeight": 70,
      },
      Object {},
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Object {
          "fontSize": 14,
          "justifyContent": "flex-start",
          "lineHeight": 18,
        },
      ]
    }
  >
    John S. saw something cool happen with someone.
  </Text>
</View>
`;

exports[`CelebrateItemContent message renders step of faith event with Not Sure stage 1`] = `
<View
  style={
    Array [
      Object {
        "marginTop": 14,
        "maxHeight": 70,
      },
      Object {},
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Object {
          "fontSize": 14,
          "justifyContent": "flex-start",
          "lineHeight": 18,
        },
      ]
    }
  >
    John S. completed a Step of Faith.
  </Text>
</View>
`;

exports[`CelebrateItemContent message renders step of faith event with stage 1`] = `
<View
  style={
    Array [
      Object {
        "marginTop": 14,
        "maxHeight": 70,
      },
      Object {},
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Object {
          "fontSize": 14,
          "justifyContent": "flex-start",
          "lineHeight": 18,
        },
      ]
    }
  >
    John S. completed a Step of Faith with a Forgiven person.
  </Text>
</View>
`;

exports[`CelebrateItemContent message renders step of faith event without stage 1`] = `
<View
  style={
    Array [
      Object {
        "marginTop": 14,
        "maxHeight": 70,
      },
      Object {},
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Object {
          "fontSize": 14,
          "justifyContent": "flex-start",
          "lineHeight": 18,
        },
      ]
    }
  >
    John S. completed a Step of Faith with someone.
  </Text>
</View>
`;

exports[`CelebrateItemContent renders event for subject=me, liked=false, like count=0 1`] = `
<View
  style={
    Array [
      Object {
        "marginTop": 14,
        "maxHeight": 70,
      },
      Object {},
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Object {
          "fontSize": 14,
          "justifyContent": "flex-start",
          "lineHeight": 18,
        },
      ]
    }
  />
</View>
`;

exports[`CelebrateItemContent renders event for subject=me, liked=false, like count>0 1`] = `
<View
  style={
    Array [
      Object {
        "marginTop": 14,
        "maxHeight": 70,
      },
      Object {},
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Object {
          "fontSize": 14,
          "justifyContent": "flex-start",
          "lineHeight": 18,
        },
      ]
    }
  />
</View>
`;

exports[`CelebrateItemContent renders event for subject=me, liked=true, like count>0 1`] = `
<View
  style={
    Array [
      Object {
        "marginTop": 14,
        "maxHeight": 70,
      },
      Object {},
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Object {
          "fontSize": 14,
          "justifyContent": "flex-start",
          "lineHeight": 18,
        },
      ]
    }
  />
</View>
`;

exports[`CelebrateItemContent renders event for subject=other, liked=false, like count=0 1`] = `
<View
  style={
    Array [
      Object {
        "marginTop": 14,
        "maxHeight": 70,
      },
      Object {},
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Object {
          "fontSize": 14,
          "justifyContent": "flex-start",
          "lineHeight": 18,
        },
      ]
    }
  />
</View>
`;

exports[`CelebrateItemContent renders event for subject=other, liked=true, like count>0 1`] = `
<View
  style={
    Array [
      Object {
        "marginTop": 14,
        "maxHeight": 70,
      },
      Object {},
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Object {
          "fontSize": 14,
          "justifyContent": "flex-start",
          "lineHeight": 18,
        },
      ]
    }
  />
</View>
`;

exports[`CelebrateItemContent renders event with fixed height 1`] = `
<View
  style={
    Array [
      Object {
        "marginTop": 14,
        "maxHeight": 70,
      },
      Object {
        "height": 70,
      },
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Object {
          "fontSize": 14,
          "justifyContent": "flex-start",
          "lineHeight": 18,
        },
      ]
    }
  />
</View>
`;

exports[`CelebrateItemContent renders event with no subject person (global community event) 1`] = `
<View
  style={
    Array [
      Object {
        "marginTop": 14,
        "maxHeight": 70,
      },
      Object {},
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Object {
          "fontSize": 14,
          "justifyContent": "flex-start",
          "lineHeight": 18,
        },
      ]
    }
  />
</View>
`;

exports[`CelebrateItemContent renders event with no subject person name 1`] = `
<View
  style={
    Array [
      Object {
        "marginTop": 14,
        "maxHeight": 70,
      },
      Object {},
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Object {
          "fontSize": 14,
          "justifyContent": "flex-start",
          "lineHeight": 18,
        },
      ]
    }
  />
</View>
`;
